@@ -1,11 +1,16 @@
 package team9502.sinchulgwinong.domain.comment.service;
 
 import lombok.AllArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import team9502.sinchulgwinong.domain.board.entity.Board;
 import team9502.sinchulgwinong.domain.board.repository.BoardRepository;
 import team9502.sinchulgwinong.domain.comment.dto.request.CommentRequestDTO;
+import team9502.sinchulgwinong.domain.comment.dto.request.CommentUdateRequestDTO;
+import team9502.sinchulgwinong.domain.comment.dto.response.CommentListResponseDTO;
 import team9502.sinchulgwinong.domain.comment.dto.response.CommentResponseDTO;
 import team9502.sinchulgwinong.domain.comment.entity.Comment;
 import team9502.sinchulgwinong.domain.comment.repository.CommentRepository;
@@ -16,7 +21,6 @@ import team9502.sinchulgwinong.global.exception.ApiException;
 import team9502.sinchulgwinong.global.exception.ErrorCode;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -48,20 +52,28 @@ public class CommentService {
     }
 
     @Transactional(readOnly = true)
-    public List<CommentResponseDTO> getAllComment(Long boardId) {
+    public CommentListResponseDTO getAllComment(Long boardId, int page, int size) {
 
-        Long totalComments = commentRepository.countCommentsByBoardId(boardId);
+        Pageable pageable = PageRequest.of(page, size);
 
-        return commentRepository.findByBoard_BoardId(boardId).stream()
-                .map(comment -> new CommentResponseDTO(comment, totalComments))
-                .collect(Collectors.toList());
+        Page<Comment> commentPage = commentRepository.findByBoard_BoardId(boardId, pageable);
 
+        List<CommentResponseDTO> commentResponseDTOS = commentPage.stream()
+                .map(CommentResponseDTO::new)
+                .toList();
+
+        return new CommentListResponseDTO(
+                commentResponseDTOS,
+                commentPage.getTotalElements(),
+                commentPage.getNumber(),
+                commentPage.getTotalPages(),
+                commentPage.getSize());
     }
 
     @Transactional
-    public CommentResponseDTO updateComment(Long boardId, Long commentId, User user, CommentRequestDTO commentRequestDTO) {
+    public CommentResponseDTO updateComment(Long boardId, Long commentId, User user, CommentUdateRequestDTO commentUdateRequestDTO) {
 
-        validation(commentRequestDTO);
+        validation(commentUdateRequestDTO);
 
         Comment comment = commentRepository.findById(commentId)
                 .orElseThrow(() -> new ApiException(ErrorCode.COMMENT_NOT_FOUND));
@@ -74,12 +86,14 @@ public class CommentService {
             throw new ApiException(ErrorCode.BOARD_NOT_FOUND);
         }
 
-        comment.setCommentContent(commentRequestDTO.getCommentContent());
+        if(commentUdateRequestDTO.getCommentContent() != null)
+            comment.setCommentContent(commentUdateRequestDTO.getCommentContent());
 
         commentRepository.save(comment);
 
         return new CommentResponseDTO(comment);
     }
+
 
     @Transactional
     public void deleteComment(Long boardId, Long commentId, User user) {
@@ -99,19 +113,35 @@ public class CommentService {
     }
 
     @Transactional(readOnly = true)
-    public List<CommentResponseDTO> getAllMyComment(User user) {
+    public CommentListResponseDTO getAllMyComment(User user, int page, int size) {
 
-        return commentRepository.findByUser_UserId(user.getUserId()).stream()
+        Pageable pageable = PageRequest.of(page, size);
+
+        Page<Comment> commentPage = commentRepository.findByUser_UserId(user.getUserId(),pageable);
+
+        List<CommentResponseDTO> commentResponseDTOS =
+                commentPage.stream()
                 .map(CommentResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();
+
+        return new CommentListResponseDTO(
+                commentResponseDTOS,
+                commentPage.getTotalElements(),
+                commentPage.getNumber(),
+                commentPage.getTotalPages(),
+                commentPage.getSize());
     }
 
     private void validation(CommentRequestDTO commentRequestDTO) {
 
-        if (commentRequestDTO.getCommentContent().isEmpty()) {
-            throw new ApiException(ErrorCode.CONTENT_REQUIRED);
-        }
         if (commentRequestDTO.getCommentContent().length() > 300) {
+            throw new ApiException(ErrorCode.CONTENT_TOO_LONG);
+        }
+    }
+
+    private void validation(CommentUdateRequestDTO commentUdateRequestDTO) {
+
+        if (commentUdateRequestDTO.getCommentContent().length() > 300) {
             throw new ApiException(ErrorCode.CONTENT_TOO_LONG);
         }
     }
